Fix meta description + move to bootstrap
Signed-off-by: Clément Lucas <clement.lucas@ynotek.fr>

--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Learn how to use the Firebase platform on the Web">
+	<meta name="description" content="ChatX technical test">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ChatX</title>
 
-  <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
 </head>
 <body>
-	<div id='root'>
-	</div>
-
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-
+	<div id='root'></div>
 	<script src="/static/bundle.js"></script>
-
 </body>
 </html>
