first version commit

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="manifest" href="/manifest.json">
     <title>React Hot Redux Firebase Starter</title>
   </head>
   <body>
