--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <title>React Hot Redux Firebase Starter</title>
   </head>
   <body>
-    <div id='root'>
+    <div id="root">
+      <!-- Black magic goes gere -->
     </div>
     <script src="/static/bundle.js"></script>
   </body>
