fix: make production ready app

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,6 @@
     <title>React Hot Redux Firebase Starter</title>
   </head>
   <body>
-    <div id='root'>
-    </div>
-    <script src="/static/bundle.js"></script>
+    <div id='root'></div>
   </body>
 </html>
