--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React Hot Redux Firebase Starter</title>
+    <title>ChatX</title>
   </head>
   <body>
     <div id='root'></div>
