--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>React Hot Redux Firebase Starter</title>
+    <title>ChatX</title>
   </head>
   <body>
     <div id='root'>
